--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <p><b>116510905009-6 พันธ์พิชิต พัวพันธ์</b></p>
         <table>
             <tr>
-                    <form action="login.html" method="get">
+                    <form action="login.html" method="post">
                         <input type="submit" id="OK" name="OK" value="เข้าสู่เว็บไซต์" class="submitbt" id="submit">
                     </form>
             </tr>
