--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
             <input type="reset" id="cancel" name="cancel" value="ยกเลิก" class="groupcancel">
         
             </form>
-            <form action="member.html" method="post" target="_blank" class="form-2">
+            <form action="member.html" method="get" target="_blank" class="form-2">
                 <h1 class="title">Register</h1>
                 <input type="submit" id="submit" name="register" value="สมัครสมาชิก" class="reg">
             </form>
