--- a/public/member.html
+++ b/public/member.html
@@ -10,7 +10,7 @@
 
     <div class="container">
       <h1 class="title">Register</h1>
-      <form action="login.html" method="post" target="_blank">
+      <form action="login.html" method="get" target="_blank">
         <div class="box-1">
             <label for="Username" class="title-label">Username: </label>
             <br>
